fix: #hero and #hero-content borders didn't align

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -163,6 +163,7 @@ main {
 
 #hero-content {
     display: grid;
+    width: 100%;
     color: #FFFFFF;
     grid-template-columns: 1fr 1fr;
     gap: 1.5px;
